--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -53,6 +53,12 @@
     @media screen and (min-width: $lg-break) {
         flex-direction: row;
     }
+    @media screen and (min-width: $md-break) {
+        height: 100vh;
+    }
+    @media screen and (max-width: $sm-break) {
+        height: 100vh;
+    }
 
     &-container {
         justify-content: center;
@@ -156,7 +162,7 @@
         &-container {
             height: 100%;
             width: 100%;
-            padding-top: 5rem;
+            padding-top: 3rem;
             position: absolute;
         }
     }
@@ -171,6 +177,7 @@
         &-image {
             img {
                 width: 100%;
+                border-radius: 1.2rem;
             }
         }
         &-image,
@@ -206,7 +213,7 @@
     }
 
     @media screen and (min-width: $lg-break) {
-        min-width: calc(4 / 12 * 100% - 3rem);
+        min-width: calc(4 / 12 * 100% - 1rem);
     }
 
     &-slider {
@@ -214,7 +221,8 @@
         padding-bottom: 2rem;
         z-index: 2;
         flex-wrap: nowrap;
-        overflow: auto;
+        overflow-x: scroll;
+        overflow-y: auto;
 
         @media screen and (min-width: $md-break) {
             padding-left: 4rem;
@@ -228,7 +236,6 @@
 
         &-bg {
             background-color: $color-pink;
-            width: 100%;
             height: 100%;
             border-radius: 1rem;
             z-index: 2;
@@ -238,16 +245,29 @@
                 padding-top: 8rem;
                 position: absolute;
                 flex-grow: 1;
+                @media screen and (max-width: 575px) {
+                    margin-left: -0.5rem;
+                    width: 400vw;
+                }
+                @media screen and (min-width: $sm-break) {
+                    margin-left: -0.5rem;
+                    width: 400vw;
+                }
 
                 @media screen and (min-width: $md-break) {
                     margin-left: -0.5rem;
+                    width: 175vw;
                 }
 
                 @media screen and (min-width: $lg-break) {
                     margin-left: -2rem;
+                    width: 125%;
                 }
             }
         }
+    }
+    &-slider::-webkit-scrollbar {
+        display: none;
     }
     &-bg {
         background-color: white;
@@ -273,6 +293,8 @@
         &-image {
             img {
                 width: 100%;
+                height: 100%;
+                border-radius: 1.5rem;
             }
         }
         &-image,
@@ -293,6 +315,7 @@
         }
     }
 }
+
 .card-location {
     @include flex-center;
     flex-direction: column;
@@ -323,7 +346,9 @@
             padding-right: 10vw;
         }
     }
-
+    &-slider::-webkit-scrollbar {
+        display: none;
+    }
     &-icon {
         @include flex-center;
         margin-bottom: 2rem;
