--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -320,6 +320,10 @@ footer {
                     display: flex;
                     justify-content: space-between;
                 }
+                @media screen and (max-width: $sm-break) {
+                    justify-content: center;
+                    align-items: center;
+                }
             }
 
             &-item {
